# compression

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  MANIFEST.in  README.md  WORKSPACE  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
python/dectris/: compression.c
python/tests/: test_compression.py
src/: compression.c  compression.h  compression_test.cc
